@@ -37,6 +37,7 @@
 -- tied array
 -- overload implemented for about half of the operators
 -- /xx regex modifier
+-- %+ regex named captures
 -- strict refs
 -- srand() returns true, warns on overflow
 -- fix read-only values
